# Fusion

./: .dockerignore  .editorconfig  .gitignore  .gitmodules  .readthedocs.yml  .travis.yml  CMakeLists.txt  Dockerfile  Dockerfile.travis  Doxyfile  LICENSE.txt  README.md  config.json  docker-config.json
docs/: CMakeLists.txt  Doxyfile  annotated.html  annotated_dup.js  classes.html  classfusion__server_1_1Game-members.html  classfusion__server_1_1Game.html  classfusion__server_1_1Game__coll__graph.map  classfusion__server_1_1Game__coll__graph.md5  classfusion__server_1_1HTTPSession-members.html  classfusion__server_1_1HTTPSession.html  classfusion__server_1_1HTTPSession__coll__graph.md5  classfusion__server_1_1HTTPSession__inherit__graph.map  classfusion__server_1_1HTTPSession__inherit__graph.md5  classfusion__server_1_1Listener-members.html  classfusion__server_1_1Listener.html  classfusion__server_1_1Listener__coll__graph.md5  classfusion__server_1_1Listener__inherit__graph.md5  classfusion__server_1_1PackageParser-members.html  classfusion__server_1_1PackageParser.html  classfusion__server_1_1PackageParser__coll__graph.map  classfusion__server_1_1PackageVerifier-members.html  classfusion__server_1_1PackageVerifier.html  classfusion__server_1_1PackageVerifier__coll__graph.map  classfusion__server_1_1PackageVerifier__coll__graph.md5  classfusion__server_1_1Player-members.html  classfusion__server_1_1Player.html  classfusion__server_1_1Player__coll__graph.map  classfusion__server_1_1Player__coll__graph.md5  classfusion__server_1_1Ray-members.html  classfusion__server_1_1Ray.html  classfusion__server_1_1Ray__coll__graph.map  classfusion__server_1_1Ray__coll__graph.md5  classfusion__server_1_1Server-members.html  classfusion__server_1_1Server.html  classfusion__server_1_1Server__coll__graph.map  classfusion__server_1_1Server__coll__graph.md5  classfusion__server_1_1WebSocketSession-members.html  classfusion__server_1_1WebSocketSession.html  classfusion__server_1_1WebSocketSession__coll__graph.map  (+76 more)
docs/d0/d11/: package__verifier_8cpp.html  package__verifier_8cpp_source.html
docs/d0/d5f/: classfusion__server_1_1Server__coll__graph.map  classfusion__server_1_1Server__coll__graph.md5
docs/d0/d95/: classfusion__server_1_1HTTPSession-members.html
docs/d0/dcf/: game_8hpp__incl.map  game_8hpp__incl.md5
docs/d1/d07/: package__verifier_8hpp__incl.map  package__verifier_8hpp__incl.md5
docs/d1/d39/: classfusion__server_1_1Context-members.html
docs/d1/db0/: json_8hpp__incl.map  json_8hpp__incl.md5
docs/d1/dc1/: classfusion__server_1_1WebSocketSession__coll__graph.map  classfusion__server_1_1WebSocketSession__coll__graph.md5
docs/d2/d40/: system__abstractions_8hpp.html  system__abstractions_8hpp.js  system__abstractions_8hpp_source.html
docs/d2/d5e/: structfusion__server_1_1Color__coll__graph.map
docs/d2/d61/: listener_8hpp__incl.map  listener_8hpp__incl.md5
docs/d2/d9e/: classfusion__server_1_1Ray__coll__graph.map  classfusion__server_1_1Ray__coll__graph.md5
docs/d2/da3/: context_8hpp_source.html
docs/d3/d0d/: player_8hpp__dep__incl.map  player_8hpp__dep__incl.md5
docs/d3/dc0/: websocket__session_8cpp__incl.map  websocket__session_8cpp__incl.md5
docs/d3/dde/: structfusion__server_1_1Point__coll__graph.map  structfusion__server_1_1Point__coll__graph.md5
docs/d4/d04/: structfusion__server_1_1Point.html  structfusion__server_1_1Point.js
docs/d4/d1d/: classfusion__server_1_1Server.html  classfusion__server_1_1Server.js
docs/d4/d20/: classfusion__server_1_1Player-members.html
docs/d4/d48/: server_8cpp__incl.map  server_8cpp__incl.md5
docs/d4/d56/: classfusion__server_1_1Server-members.html
docs/d4/d5c/: classfusion__server_1_1Player__coll__graph.map  classfusion__server_1_1Player__coll__graph.md5
docs/d4/d98/: package__verifier_8hpp__dep__incl.map  package__verifier_8hpp__dep__incl.md5
docs/d4/d9a/: structfusion__server_1_1Color-members.html
docs/d4/dc9/: structfusion__server_1_1Point-members.html
docs/d4/dcf/: classfusion__server_1_1WebSocketSession__inherit__graph.map  classfusion__server_1_1WebSocketSession__inherit__graph.md5
docs/d5/d0c/: package__verifier_8cpp__incl.map  package__verifier_8cpp__incl.md5
docs/d5/d39/: server_8hpp__dep__incl.map  server_8hpp__dep__incl.md5
docs/d5/d76/: player_8hpp__incl.map  player_8hpp__incl.md5
docs/d5/d8b/: http__session_8hpp__dep__incl.map  http__session_8hpp__dep__incl.md5
docs/d5/d95/: classfusion__server_1_1Player.html  classfusion__server_1_1Player.js
docs/d5/d96/: game_8hpp__dep__incl.map  game_8hpp__dep__incl.md5
docs/d5/da4/: listener_8cpp__incl.map  listener_8cpp__incl.md5
docs/d5/db8/: json_8hpp.html  json_8hpp.js  json_8hpp_source.html
docs/d6/d23/: classfusion__server_1_1Listener.html  classfusion__server_1_1Listener.js
docs/d6/d4f/: classfusion__server_1_1Listener__coll__graph.map  classfusion__server_1_1Listener__coll__graph.md5
docs/d6/d60/: http__session_8hpp__incl.map  http__session_8hpp__incl.md5
docs/d6/d79/: package__parser_8cpp.html  package__parser_8cpp_source.html
docs/d6/d88/: classfusion__server_1_1PackageParser.html  classfusion__server_1_1PackageParser.js
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  enums_0.js  enumvalues_0.js  files_0.js  files_1.js  files_3.js  files_4.js  files_5.js  files_7.js  functions_0.js  (+43 more)
executable/: CMakeLists.txt
executable/src/: main.cpp
server/: CMakeLists.txt  README.md
server/src/: connection.cpp  http_session.cpp  listener.cpp  package_parser.cpp  server.cpp  websocket_session.cpp
server/test/: CMakeLists.txt
test/: CMakeLists.txt
test/src/: abstract_test.cpp  connectionTests.cpp  http_session_test.cpp  listener_test.cpp  logger_manager_test.cpp  main.cpp  player_factory_test.cpp  player_test.cpp
(+134 files in other folders)
